@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v9r2p5
+  {
+    Modules = LHCbDIRAC:v9r2p5, LHCbWebDIRAC:v4r4p8
+    Depends = DIRAC:v6r20p12
+    LcgVer = v14r2
+  }
+
   v9r2p4
   {
     Modules = LHCbDIRAC:v9r2p4, LHCbWebDIRAC:v4r4p8
